2014-May-18 Struan Robertson

	* HinderedRotorQM1D.cpp, HinderedRotorCM1D.cpp, MolecularComponents.cpp/.h, 
	MesmerMaths.cpp/.h: Altered to calculate the cosine Fourier coefficients of 
	the reciprocal internal moment of inertia and make them available to the 
	hindered rotor method.

2014-May-11 Struan Robertson

	* MolecularComponents.cpp/.h: Angle dependent GRIT calculated for a fixed 
	number of configurations.

2014-May-04 Struan Robertson

	* HinderedRotorQM1D.cpp, HinderedRotorCM1D.cpp, MolecularComponents.cpp/.h: 
	Refactoring of code between class gstructure and the hindered rotor classes 
	in order to simplify the calculation of an angle dependent GRIT.

2014-April-29 Chris Morley
	* src/plugins/HinderedRotorQM1D.cpp, src/plugins/HinderedRotorCM1D.cpp:
	accept both "useSineTerms" and "UseSineTerms" and "yes", "true", "1" for
	the positive value.

	* src/TMatrix.h: extra #include <cstring> which might help Linux build.
2014-May 15 Chris Morley
	 
	* src/plugins/PriorDistribution.cpp, AcetylPrior.xml: Tidy XML and
	allow EnergyExcess to be a range variable (no apparent problems)
	Still gves BW warning message.

	* schemas/mesmer.xsd, schemas/mesmerPlugins.xsd: update for above
	and extra guidance for names of calcMethods with no data.

2014-April-27 Struan Robertson

	* MolecularComponents.cpp/.h: Update of GRIT algorithm to account for 
	the relative rotation of fragments.

2014-April-26 Chris Morley

	* src/System.cpp, src/System.h: allow multiple <control> blocks. Use
	separate flags for each one, but <molecules>, <reactions>, <parameters>
	and <conditions> are all common.

	* examples/i-propyl/ipropyl_2ContrBlks.xml: example file with fitting and
	 then Chebeshev output.

	* schemas/mesmer.xsd: update schema

2014-April-22 Struan Robertson

	* MolecularComponents.cpp: Fix for bug no. 13 "Internal rotation projection 
	vector incorrect".

2014-April-21 Struan Robertson

	* HinderedRotorQM1D.cpp, HinderedRotorCM1D.cpp, MolecularComponents.cpp/.h, 