@@ -1,5 +1,10 @@
 2014-May-18 Struan Robertson
 
+	* MolecularComponents.cpp/.h: Refactoring of the internal rotation vector 
+	method.
+
+2014-May-18 Struan Robertson
+
 	* HinderedRotorQM1D.cpp, HinderedRotorCM1D.cpp, MolecularComponents.cpp/.h, 
 	MesmerMaths.cpp/.h: Altered to calculate the cosine Fourier coefficients of 
 	the reciprocal internal moment of inertia and make them available to the 
